fixed repo link; added some info to about page; added components and tutorial pages; added some images (not all are being used though); some css helpers for information boxes

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,8 @@
 site_name: Genemede
 nav:
   - About: about.md
+  - Components: components.md
+  - Tutorial: tutorial.md
   - Developer Guide: 'developer/'
   - Reference: 'reference/'
 
@@ -25,3 +27,6 @@ watch:
   - src
 extra_css:
   - gnmd.css
+
+markdown_extensions:
+  - attr_list
