--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,5 @@
 site_name: Genemede
 nav:
-  - index.md
   - About: about.md
   - Components: components.md
   - Tutorial: tutorial.md
@@ -8,8 +7,9 @@ nav:
   - Reference: 'reference/index.md'
 
 theme:
-  #name: readthedocs
-  name: mkdocs
+  #name: mkdocs
+  name: readthedocs
+  logo: img/wikilogo-big.svg
   color_mode: dark
   user_color_mode_toggle: true
   locale: en
@@ -27,7 +27,8 @@ plugins:
 watch:
   - src
 extra_css:
-  - gnmd.css
+  #- gnmd.css
+  - gnmd-rtd.css
 
 markdown_extensions:
   - attr_list
